[project]
name = "pullwise-server"
version = "0.1.0"
description = "Local Python API server for Pullwise Web"
requires-python = ">=3.10.12,<3.11"
dependencies = [
  "Authlib>=1.6,<2",
  "cryptography>=42,<47",
  "PyGithub>=2.9,<3",
  "requests>=2.32,<3",
]

[project.scripts]
pullwise-server = "pullwise_server.app:main"

[tool.setuptools]
packages = ["pullwise_server"]
